@@ -1,4 +1,5 @@
 v0.3
+- custom curbs
 - added pit lane wall
 - checked friction settings (slippery, rainy?)
 - sand texture
